# red

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  versions.json
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  docs.yaml  pypi.yaml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/changelog/: index.html
0.1.0/development/: index.html
0.1.0/examples/: index.html
0.1.0/reference/: index.html
0.1.0/reference/SUMMARY/: index.html
0.1.0/reference/confidence_intervals/: index.html
0.1.0/reference/equilibration/: index.html
0.1.0/reference/ess/: index.html
0.1.0/reference/gelman_rubin/: index.html
0.1.0/reference/plot/: index.html
0.1.0/reference/sse/: index.html
0.1.0/reference/variance/: index.html
0.1.0/scripts/: gen_ref_pages.py
0.1.0/theory/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/changelog/: index.html
0.1.1/development/: index.html
0.1.1/examples/: index.html
0.1.1/reference/: index.html
0.1.1/reference/SUMMARY/: index.html
0.1.1/reference/confidence_intervals/: index.html
0.1.1/reference/equilibration/: index.html
0.1.1/reference/ess/: index.html
0.1.1/reference/gelman_rubin/: index.html
0.1.1/reference/plot/: index.html
0.1.1/reference/sse/: index.html
0.1.1/reference/variance/: index.html
0.1.1/search/: search_index.json
0.1.1/theory/: index.html
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/changelog/: index.html
0.1.3/development/: index.html
0.1.3/examples/: index.html
0.1.3/reference/: index.html
0.1.3/reference/SUMMARY/: index.html
0.1.3/reference/confidence_intervals/: index.html
0.1.3/reference/equilibration/: index.html
0.1.3/reference/ess/: index.html
0.1.3/reference/gelman_rubin/: index.html
0.1.3/reference/plot/: index.html
0.1.3/reference/sse/: index.html
0.1.3/reference/variance/: index.html
0.1.3/theory/: index.html
deea/: __init__.py  _validation.py  equilibration.py  ess.py  exceptions.py  gelman_rubin.py  plot.py  sse.py  variance.py
deea/data/: example_times.npy
deea/tests/: __init__.py  test_equilibration.py  test_ess.py  test_gelman_rubin.py  test_import.py  test_plot.py  test_sse.py  test_validation.py  test_variance.py
devtools/: README.md
devtools/conda-envs/: base.yaml  test.yaml  test_env.yaml
devtools/scripts/: create_conda_env.py
docs/: Makefile  README.md  api.rst  changelog.md  conf.py  development.md  examples.md  getting_started.rst  index.rst  make.bat  theory.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/changelog/: index.html
latest/development/: index.html
latest/examples/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/confidence_intervals/: index.html
latest/reference/equilibration/: index.html
latest/reference/ess/: index.html
latest/reference/gelman_rubin/: index.html
latest/reference/plot/: index.html
latest/reference/sse/: index.html
latest/reference/variance/: index.html
latest/search/: search_index.json
latest/theory/: index.html
red/: __init__.py  _exceptions.py  _validation.py  _version.py  confidence_intervals.py  equilibration.py  ess.py  gelman_rubin.py  plot.py  sse.py  variance.py
red/data/: example_timeseries.npy
red/red/tests/: test_sse.py  test_variance.py
red/tests/: __init__.py  test_confidence_intervals.py  test_equilibration.py  test_ess.py  test_gelman_rubin.py  test_import.py  test_plot.py  test_sse.py  test_validation.py  test_variance.py
